# Zerm

./: .gitignore  BUILDING.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  announcements.json  appcast.xml  dashboard.html  index.html  package.json  plan.md  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  release.yml
Notebook/: Zerm Architecture.md  Zerm Auto Paste.md  Zerm Known Follow Ups.md  Zerm On-Device LLM.md  Zerm Overview.md  Zerm Production History.md  Zerm Read Aloud.md  Zerm Runtime Privacy Model.md  Zerm Setup And Permissions.md  Zerm Smart Reading.md  Zerm Three Model Platform.md  Zerm Verification Workflow.md  _INDEX_Main.md
Zerm/: AppDefaults.swift  ClipboardManager.swift  CoreAudioRecorder.swift  CursorPaster.swift  HistoryWindowController.swift  HotkeyManager.swift  Info.plist  MediaController.swift  MenuBarManager.swift  Recorder.swift  Zerm.swift
Zerm.xcodeproj/: project.pbxproj
Zerm.xcodeproj/xcshareddata/xcschemes/: Zerm.xcscheme
Zerm/AppIntents/: ToggleMiniRecorderIntent.swift
Zerm/LocalLLM/: LlamaBridge.h  LlamaBridge.mm  LlamaEngine.swift  LocalLLMModelManager.swift
Zerm/Models/: LicenseViewModel.swift
Zerm/Notifications/: AnnouncementManager.swift  NotificationManager.swift
Zerm/PowerMode/: ActiveWindowService.swift  BrowserURLService.swift  PowerModeConfig.swift  PowerModeSessionManager.swift  PowerModeShortcutManager.swift  PowerModeViewComponents.swift
Zerm/Services/: APIKeyManager.swift  AudioDeviceConfiguration.swift  AudioFileTranscriptionManager.swift  AudioFileTranscriptionService.swift  ImportExportService.swift  KeychainService.swift  LicenseManager.swift  ModelPrewarmService.swift  Obfuscator.swift  PromptDetectionService.swift  SelectedTextService.swift  TranscriptionAutoCleanupService.swift  UserDefaultsManager.swift
Zerm/Services/AIEnhancement/: AIEnhancementService.swift  AIService.swift  LocalCLIService.swift
Zerm/TextToSpeech/: TTSController.swift  TTSModels.swift  TTSProvider.swift  TTSTextNormalizer.swift
Zerm/TextToSpeech/Kokoro/: KokoroEngine.swift  KokoroModelManager.swift
Zerm/TextToSpeech/Providers/: ElevenLabsTTSProvider.swift  GeminiTTSProvider.swift  InworldTTSProvider.swift  OpenAITTSProvider.swift
Zerm/Transcription/Cloud/: CustomCloudModelManager.swift
Zerm/Transcription/Engine/: RecordingState.swift  TranscriptionModelManager.swift  TranscriptionPipeline.swift  TranscriptionServiceRegistry.swift  TranscriptionSession.swift  ZermEngine.swift  ZermEngineError.swift
Zerm/Transcription/FluidAudio/: FluidAudioModelManager.swift  FluidAudioTranscriptionService.swift
Zerm/Transcription/Native/: NativeAppleTranscriptionService.swift
Zerm/Transcription/Processing/: TranscriptionOutputFilter.swift
Zerm/Transcription/Streaming/: DeepgramStreamingProvider.swift  StreamingTranscriptionProvider.swift  StreamingTranscriptionService.swift
Zerm/Transcription/Whisper/: LibWhisper.swift  WhisperModelManager.swift  WhisperPrompt.swift  WhisperTranscriptionService.swift
Zerm/Views/: AudioPlayerView.swift  AudioTranscribeView.swift  ContentView.swift  LicenseManagementView.swift  MenuBarView.swift  MetricsView.swift  PermissionsView.swift
Zerm/Views/AI Models/: APIKeyManagementView.swift  (+1 more)
ZermTests/: ZermTests.swift
ZermUITests/: ZermUITests.swift  ZermUITestsLaunchTests.swift
docs/: index.html  native-writing-layer-verification.md  site.js  style.css
native-macos/: Makefile  README.md  appcast.xml
native-macos/Zerm/: AppDefaults.swift  CoreAudioRecorder.swift  CursorPaster.swift  CustomSoundManager.swift  EmailSupport.swift  HotkeyManager.swift  MenuBarManager.swift  MiniRecorderShortcutManager.swift  WindowManager.swift  Zerm-Bridging-Header.h  Zerm.entitlements  Zerm.swift
native-macos/Zerm.xcodeproj/: project.pbxproj
scripts/: verify-native-writing-layer.sh
src/: dashboard.css  dashboard.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  hotkey.rs  lib.rs  main.rs  ollama.rs  prompt_he.txt  prompt_nonlatin.txt  prompt_ru.txt  state.rs  system_prompt.txt  vad.rs  whisper.rs
src-tauri/src/insertion/: mod.rs  strategy.rs
src-tauri/src/platform/: error.rs  macos_permissions.rs  mod.rs  services.rs  support.rs  types.rs
(+72 files in other folders)
