[package]
name = "zerm"
version = "0.1.0"
description = "Developer voice-to-agent app"
edition = "2021"

[lib]
name = "zerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cpal = "0.15"
whisper-rs = { version = "0.13", features = ["metal"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
objc2-foundation = "0.3"
block2 = "0.6"
anyhow = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies.embed_plist]
version = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."whisper-rs"]
opt-level = 3

[profile.dev.package."whisper-rs-sys"]
opt-level = 3
