[package]
name = "zerm"
version = "0.1.0"
description = "Developer voice-to-agent app"
edition = "2021"

[lib]
name = "zerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
# Cross-platform global hotkey fallback (Windows/Linux; macOS uses the
# native NSEvent monitor in hotkey.rs for modifier-only push-to-talk).
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cpal = "0.15"
# Default whisper-rs build is CPU-only so it compiles on Linux/Windows.
# macOS overrides below to enable Metal GPU acceleration.
whisper-rs = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
futures-util = "0.3"
arboard = "3"
anyhow = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["elcapitan"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = "0.3"
block2 = "0.6"
embed_plist = "1"
# macOS gets Metal GPU acceleration on top of the base whisper-rs dep.
whisper-rs = { version = "0.13", features = ["metal"] }

[profile.dev]
opt-level = 1

[profile.dev.package."whisper-rs"]
opt-level = 3

[profile.dev.package."whisper-rs-sys"]
opt-level = 3

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
